<resources>
    <string name="app_name">Tour Guide</string>
    <string name="restaurants">Restaurants</string>
    <string name="historical_places">Historical Places</string>
    <string name="shopping_places">Shopping Places</string>
    <string name="about_the_city">About Egypt</string>
    <string name="the_location">Egypt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_egypt">Egypt has one of the longest histories of any country, tracing its heritage along the Nile Delta back to the 6th–4th millennia BCE. Considered a cradle of civilisation, Ancient Egypt saw some of the earliest developments of writing, agriculture, urbanisation, organised religion and central government.Iconic monuments such as the Giza Necropolis and its Great Sphinx, as well the ruins of Memphis, Thebes, Karnak, and the Valley of the Kings, reflect this legacy and remain a significant focus of scientific and popular interest. Egypt\'s long and rich cultural heritage is an integral part of its national identity, which has endured, and often assimilated, various foreign influences, including Greek, Persian, Roman, Arab, Ottoman Turkish, and Nubian. Egypt was an early and important centre of Christianity, but was largely Islamised in the seventh century and remains a predominantly Muslim country, albeit with a significant Christian minority.Modern Egypt dates back to 1922, when it gained independence from the British Empire as a monarchy. Following the 1952 revolution, Egypt declared itself a republic, and in 1958 it merged with Syria to form the United Arab Republic, which dissolved in 1961. Throughout the second half of the 20th century, Egypt endured social and religious strife and political instability, fighting several armed conflicts with Israel in 1948, 1956, 1967 and 1973, and occupying the Gaza Strip intermittently until 1967. In 1978, Egypt signed the Camp David Accords, officially withdrawing from the Gaza Strip and recognising Israel. The country continues to face challenges, from political unrest, including the recent 2011 revolution and its aftermath, to terrorism and economic underdevelopment. Egypt\'s current government, a semi-presidential republic has been described by a number of watchdogs as authoritarian or heading an authoritarian regime, responsible for perpetuating the country\'s problematic human rights record.</string>
    <string name="copyRight">Copyright © 2020 TourGuide All right reserved</string>
    <string name="splash_msg">your guide with you all the time</string>
    <string name="cairo_tower_desc">The Cairo Tower (Egyptian Arabic: برج القاهرة‎, Borg El-Qāhira) is a free-standing concrete tower in Cairo, Egypt. At 187 m (614 ft), it is the tallest structure in Egypt and North Africa. It was the tallest structure in Africa for ten years until 1971, when it was surpassed by Hillbrow Tower in South Africa.\n\" +                 \"\n\" +                 \"One of Cairo\'s well-known modern monuments, sometimes considered Egypt\'s second most famous landmark after the Pyramids of Giza, it stands in the Gezira district on Gezira Island in the River Nile, close to downtown Cairo.</string>
    <string name="karnak_desc">The Karnak Temple Complex, commonly known as Karnak, comprises a vast mix of decayed temples, chapels, pylons, and other buildings near Luxor, in Egypt. Construction at the complex began during the reign of Senusret I in the Middle Kingdom (around 2000–1700 BC) and continued into the Ptolemaic period (305–30 BC), although most of the extant buildings date from the New Kingdom. The area around Karnak was the ancient Egyptian Ipet-isut (\"The Most Selected of Places\") and the main place of worship of the Eighteenth Dynasty Theban Triad with the god Amun as its head. It is part of the monumental city of Thebes. The Karnak complex gives its name to the nearby, and partly surrounded, modern village of El-Karnak, 2.5 kilometres (1.6 miles) north of Luxor.</string>
    <string name="aswan_dam_desc">The Aswan Dam, or more specifically since the 1960s, the Aswan High Dam, is the world\'s largest embankment dam built across the Nile in Aswan, Egypt, between 1960 and 1970. Its significance largely eclipsed the previous Aswan Low Dam initially completed in 1902 downstream. Based on the success of the Low Dam, then at its maximum utilization, construction of the High Dam became a key objective of the government following the Egyptian Revolution of 1952; with its ability to better control flooding, provide increased water storage for irrigation and generate hydroelectricity the dam was seen as pivotal to Egypt\'s planned industrialization. Like the earlier implementation, the High Dam has had a significant effect on the economy and culture of Egypt.</string>
    <string name="pyramids_desc">The Giza Pyramid Complex, also called the Giza Necropolis, is the site on the Giza Plateau in Greater Cairo, Egypt that includes the Great Pyramid of Giza, the Pyramid of Khafre, and the Pyramid of Menkaure, along with their associated pyramid complexes and the Great Sphinx of Giza. All were built during the Fourth Dynasty of the Old Kingdom of Ancient Egypt. The site also includes several cemeteries and the remains of a workers village.</string>
    <string name="qaitbay_desc">The Citadel of Qaitbay (or the Fort of Qaitbay; Arabic: قلعة قايتباي‎) is a 15th-century defensive fortress located on the Mediterranean sea coast, in Alexandria, Egypt. It was established in 1477 AD (882 AH) by Sultan Al-Ashraf Sayf al-Din Qa\'it Bay. The Citadel is situated on the eastern side of the northern tip of Pharos Island at the mouth of the Eastern Harbour.</string>
    <string name="alex_library_desc">The Great Library of Alexandria in Alexandria, Egypt, was one of the largest and most significant libraries of the ancient world. The Library was part of a larger research institution called the Mouseion, which was dedicated to the Muses, the nine goddesses of the arts.[10] The idea of a universal library in Alexandria may have been proposed by Demetrius of Phalerum, an exiled Athenian statesman living in Alexandria, to Ptolemy I Soter, who may have established plans for the Library, but the Library itself was probably not built until the reign of his son Ptolemy II Philadelphus. The Library quickly acquired many papyrus scrolls, due largely to the Ptolemaic kings\' aggressive and well-funded policies for procuring texts. It is unknown precisely how many such scrolls were housed at any given time, but estimates range from 40,000 to 400,000 at its height.</string>
    <string name="saint_cathrine_desc">Saint Catherine\'s Monastery (Arabic: دير القدّيسة كاترين‎; Greek: Μονὴ τῆς Ἁγίας Αἰκατερίνης), officially Sacred Monastery of the God-Trodden Mount Sinai (Greek: Ιερά Μονή του Θεοβαδίστου Όρους Σινά), is an Eastern Orthodox monastery located on the Sinai Peninsula, at the mouth of a gorge at the foot of Mount Sinai, near the town of Saint Catherine, Egypt. The monastery is named after Catherine of Alexandria.</string>
    <string name="abu_simple_desc">The Abu Simbel temples are two massive rock-cut temples at Abu Simbel (Arabic: أبو سمبل‎), a village in Aswan Governorate, Upper Egypt, near the border with Sudan. They are situated on the western bank of Lake Nasser, about 230 km (140 mi) southwest of Aswan (about 300 km (190 mi) by road). The complex is part of the UNESCO World Heritage Site known as the \"Nubian Monuments\",[1] which run from Abu Simbel downriver to Philae (near Aswan)</string>
    <string name="cairo_tower">Cairo Tower</string>
    <string name="cairo">Cairo</string>
    <string name="cairo_tower_address">Zamalek, Cairo Governorate</string>
    <string name="el_karnak">El-Karnak Temple</string>
    <string name="luxor">Luxor</string>
    <string name="karnak_address">Karnak, Luxor, Luxor Governorate.</string>
    <string name="aswan_dam">Aswan Dam</string>
    <string name="aswan">Aswan</string>
    <string name="aswan_dam_address">Manteqet as Sad Al Aali, Qism Aswan, Aswan Governorate.</string>
    <string name="giza_pyramids">Giza pyramid</string>
    <string name="giza">Giza</string>
    <string name="pyramids_address">Al Haram, Nazlet El-Semman, Al Giza Desert, Giza Governorate</string>
    <string name="qaitbay">Citadel of Qaitbay</string>
    <string name="alex">Alexandria</string>
    <string name="qaitbay_address">As Sayalah Sharq, Qesm Al Gomrok, Alexandria Governorate</string>
    <string name="library_alex">Library of Alexandria</string>
    <string name="alex_library_address">Al Azaritah WA Ash Shatebi, Qism Bab Sharqi, Alexandria Governorate</string>
    <string name="saint_cathrine">Saint Catherine\'s Monastery</string>
    <string name="sinai">Sinai</string>
    <string name="saint_cathrine_address">Saint Catherine, South Sinai Governorate</string>
    <string name="abu_simple_address">Abu Simbel, Aswan Governorate</string>
    <string name="abu_simble">Abu Simbel temples</string>
    <string name="about_egypt_header">About Egypt</string>
    <string name="historical_header">Historical Places</string>
    <string name="rest_header">Best restaurants</string>
    <string name="shops_header">Shopping Malls</string>
    <string name="details_header">Details</string>
    <string name="rest1_name">Egyptian Nights</string>
    <string name="rest2_name">Abou El Sid Restaurant</string>
    <string name="rest3_name">Zööba</string>
    <string name="rest4_name">Attia Egyptian Street Food</string>
    <string name="rest5_name">3Almashy Egypt</string>
    <string name="rest6_name">Crimson Cair</string>
    <string name="rest7_name"><![CDATA[Saigon Restaurant & Lounge]]></string>
    <string name="rest_desc"><![CDATA[Originally constructed as a visitor’s palace, Cairo Marriott Hotel & Omar Khayyam Casino has provided guests the royal treatment for decades. Modern guestrooms offer luxury bedding, free Wi-Fi and 24-hour room service. Many have balconies with garden, city or Nile views. Luxury hotel suites feature generous layouts, kitchenettes and fireplaces. perks like free breakfast, afternoon tea and dessert. Enjoy on-site amenities including a 24-hour gym, outdoor lap pool, a spa and an elegant casino. Several of our 14 dining options are set in our lush gardens. Wedding and conference planners appreciate our hotel\'s versatile and unique event venues and proximity to some of the world’s most famous sites, including the Pyramids, Sphinx and Cairo Tower. Be transported to the Egypt of 1869 when you step into the lobby of our 5-star luxury hotel in downtown Cairo.]]></string>
    <string name="rest2_city">El Zamalek, Cairo Governorate</string>
    <string name="rest4_city">Elsahel, Cairo Governorate</string>
    <string name="rest7_city">Ramlet Beaulac, Cairo Governorate</string>
    <string name="rest1_address">Cairo Marriott Hotel - 16 Saray El, Gezira St, Zamalek, Cairo Governorate</string>
    <string name="rest2_address">Address: 157 26th of July Corridor, St, El Zamalek, Cairo Governorate</string>
    <string name="rest3_address">16 26 July St, Al Gabalayah, Zamalek, Giza Governorate</string>
    <string name="rest4_address">2005 Nile Corniche, Asad, Elsahel, Cairo Governorate</string>
    <string name="rest5_address">12 Brazil St, Mohammed Mazhar, Zamalek, Cairo Governorate</string>
    <string name="rest6_address">St. (former Montazah St, 16 Kamal Al Tawil, Zamalek, Cairo Governorate</string>
    <string name="rest7_address">Fairmont Nile City, Nile City Towers - 2005 B, Corniche El Nil, Ramlet Beaulac, Cairo Governorate</string>
    <string name="rest1_phone">02 27283000</string>
    <string name="rest2_phone">02 27359640</string>
    <string name="rest3_phone">02 27359640</string>
    <string name="rest4_phone">0115 097 0000</string>
</resources>